# test1

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements  requirements.txt  runtime.txt  setup.cfg
.github/workflows/: unittest_linter_check.yml
fixtures/: labels.json
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: __init__.py  dataclasses.py  forms.py  models.py  services.py  settings.py  urls.py  views.py
task_manager/fixtures/: statuses.json  tasks.json  users.json
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_labels_options_alter_labels_name.py
task_manager/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_statuses_options.py  (+1 more)
task_manager/tags/: admin.py  models.py
task_manager/task_manager/: settings.py  wsgi.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  login.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
templates/: base.html  create_user.html  index.html  login.html
templates/labels/: create_label.html  delete_label.html  labels_list.html  update_label.html
templates/statuses/: create_status.html  delete_status.html  status_update.html  statuses.html  statuses_list.html
templates/tasks/: create_task.html  delete_task.html  tasks_list.html  update_task.html  view_task.html
templates/users/: create_user.html  delete_user.html  update_user.html  users.html  users_list.html  users_update.html  users_update_form.html
(+33 files in other folders)
